# Django-Channels-Websockets

./: commands.md  db.sqlite3  pyproject.toml
chat/: admin.py  consumers.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_message_sender.py  0003_room_message_room.py  0004_remove_message_sender_message_timestamp.py  0005_message_sender.py
chat/templates/chat/: index.html  room.html
mysite/: asgi.py  settings.py  urls.py
urlshortener/: admin.py  models.py  urls.py
urlshortener/migrations/: 0001_initial.py  0002_auto_20220225_1104.py  0003_auto_20220225_1107.py
