[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.0.0"
channels = "^3.0.4"
docker = "^5.0.3"
checkio_docker = "^0.0.25"
redis = "^4.1.4"
[tool.poetry.dev-dependencies]
